cmake_minimum_required(VERSION 3.5)
project( LandmarkDemo )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( aam-train aam-train.cpp)
add_executable( aam-demo aam-demo.cpp )
add_executable( aam-webcam-demo aam-webcam-demo.cpp )
target_link_libraries( aam-train ${OpenCV_LIBS} )
target_link_libraries( aam-demo ${OpenCV_LIBS} )
target_link_libraries( aam-webcam-demo ${OpenCV_LIBS} )
