cmake_minimum_required(VERSION 3.5)
project( LandmarkDemo )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( lbf-train lbf-train.cpp)
target_link_libraries( lbf-train ${OpenCV_LIBS} )
add_executable( lbf-demo lbf-demo.cpp )
target_link_libraries( lbf-demo ${OpenCV_LIBS} )
add_executable( lbf-webcam-demo lbf-webcam-demo.cpp )
target_link_libraries( lbf-webcam-demo ${OpenCV_LIBS} )
